--- a/src/main/resources/templates/messenger/chatRoom.html
+++ b/src/main/resources/templates/messenger/chatRoom.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Chat Room</title>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stomp-websocket/lib/stomp.min.js"></script>
 </head>
 <body>
 <h1 th:text="${chatRoom.chatRoomName}"></h1>
@@ -19,7 +21,7 @@
 
 <!-- 메시지 입력 폼 -->
 <form id="messageForm">
-    <input type="text" id="messageInput" placeholder="Type your message..." />
+    <input type="text" id="message" placeholder="Enter a message"/>
     <button type="submit">Send</button>
 </form>
 
@@ -27,7 +29,7 @@
     <!-- 수신된 메시지가 여기에 표시됩니다 -->
 </div>
 
-<script src="/your-socket-io-library.js"></script> <!-- Socket.io 라이브러리 불러오기 -->
+<!--<script src="/your-socket-io-library.js"></script>--> <!-- Socket.io 라이브러리 불러오기 -->
 <script>
     var stompClient = null;
 
