--- a/src/main/resources/templates/messenger/chatRoom.html
+++ b/src/main/resources/templates/messenger/chatRoom.html
@@ -65,6 +65,8 @@
         var messageParagraph = document.createElement('p');
         messageParagraph.appendChild(document.createTextNode(message));
         messagesDiv.appendChild(messageParagraph);
+        window.location.reload()
+        //fetch로 메시지 리스트 재구현
     }
 
     document.getElementById('messageForm').addEventListener('submit', function(event) {
