--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -34,7 +34,7 @@
 			font-size: 35px;
 		}
 
-		
+
 
 		.review {
 			background-color: #F7F8E0;
@@ -42,6 +42,26 @@
 			border: 1.5px solid #cfcfc6;
 			padding: 20px;
 		}
+		
+		#mapParent{
+			width: 100%;
+			height: 300px; 
+			padding: 5px;  
+			display: flex;
+			flex-direction: row;
+			background-color: #F7F8E0;
+			border-radius: 8px;
+			border: 1.5px solid #cfcfc6;
+		}
+		
+		.mapChild{
+			flex: 1 0 auto;
+			padding: 5px;  
+
+		}
+		
+		
+		
 	</style>
 
 
@@ -189,7 +209,7 @@
 				<!--리뷰-->
 				<h2>리뷰</h2>
 				<div class="review">
- 					<div style="display: flex; align-items: center; ">
+					<div style="display: flex; align-items: center; ">
 						<!-- 별점 평균 계산 -->
 						<i class="fas fa-star"></i>
 						<h4 class="title" th:text="${programAvg}"></h4>
@@ -220,7 +240,15 @@
 
 			<div style="width: 100%;">
 				<h2>호스팅 지역</h2>
-				<img th:src="@{/img/seoul.jpeg}" alt="map" style="width: 100%;">
+				<div id="mapParent">
+					<div id="address" class="mapChild" style="width:30%;">
+						<h3>주소</h3>
+						<pre th:text="'우편번호 : '+${program.postcode}"></pre>
+						<pre th:text="'상세주소 : '+${program.address}" + "${program.detailed_address}"></pre>
+				https://console.cloud.google.com/google/maps-apis/build/locator-plus?project=inbound-density-411507
+					</div>
+					<div id="googleMap" style="width:65%; background-color: blue" ></div>
+				</div>
 			</div>
 
 			<br>
@@ -284,6 +312,21 @@
 		}
 	</script>
 
+
+<script>
+	
+   function myMap(){
+      var mapOptions = { 
+            center:new google.maps.LatLng(51.508742, -0.120850),
+            zoom:5
+      };
+ 
+      var map = new google.maps.Map( 
+             document.getElementById("googleMap") 
+            , mapOptions );
+   }
+</script> 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBU-o1BNLzLIcDQzL5S47RQzLkS0XhnSG8&callback=myMap"></script>
 
 </body>
 
