--- a/src/main/resources/templates/messenger/chatRoom.html
+++ b/src/main/resources/templates/messenger/chatRoom.html
@@ -9,6 +9,7 @@
 <body>
 <h1 th:text="${chatRoom.chatRoomName}"></h1>
 <input type="hidden" id="chatRoomId" th:value="${chatRoom.chatRoomId}"></input>
+<input type="hidden" id="userId" th:value="${userId}"></input>
 
 <div>
     <!-- 채팅 내용 표시 -->
@@ -51,9 +52,12 @@
     function sendMessage() {
         var messageText = document.getElementById('message').value;
         var chatRoomId = document.getElementById('chatRoomId').value;
+        var userId = document.getElementById('userId').value;
+
         stompClient.send("/app/sendMessage", {}, JSON.stringify({
                 'messageText': messageText,
-                'chatRoomId': chatRoomId
+                'chatRoomId': chatRoomId,
+                'userId': userId
             })
         );
         document.getElementById('message').value = '';
