채팅방 리스트 웹소켓으로 가져오기

--- a/src/main/resources/templates/messenger/chatRoomList.html
+++ b/src/main/resources/templates/messenger/chatRoomList.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Chat Room List</h1>
-<input type="text" id="userId" th:value="${userId}"></input>
+<input type="hidden" id="userId" th:value="${userId}"></input>
 
 <div id="chatRooms"></div>
 
