메신저 메뉴 추가

--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -19,6 +19,7 @@
         <nav class="menu">
             <h2><a th:href="@{/program/list}" th:text="홈스테이"></a></h2>
             <h2><a th:href="@{/board/boardList}" th:text="커뮤니티"></a></h2>
+            <h2><a th:href="@{/messenger}" th:text="메신저"></a></h2>
 
             <div class="google-translate-container">
                 <div id="google_translate_element" class="hd_lang"></div>
