int >> Long으로 통일

--- a/src/main/resources/templates/messenger/view.html
+++ b/src/main/resources/templates/messenger/view.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="chatroom-container">
-                채팅방
+                채팅방 이름
 
                 <!-- 채팅 내용 표시 -->
                 <div id="chatroom">
