--- a/src/main/resources/templates/messenger/view.html
+++ b/src/main/resources/templates/messenger/view.html
@@ -5,13 +5,14 @@
     <title>Chat Room List</title>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stomp-websocket/lib/stomp.min.js"></script>
-    <style>
-        .messenger-content {
-            display: flex;
-        }
-    </style>
+
+    <link rel="stylesheet" th:href="@{/css/main/messenger.css}">
+
+
 </head>
 <body>
+
+<header th:replace="layouts/header::header"></header>
 
 <main>
     <div class="messenger-container">
@@ -46,6 +47,8 @@
         </div>
     </div>
 </main>
+
+<footer th:replace="layouts/footer::footer"></footer>
 
 <script>
     var stompClient = null;
